@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2004/02/24 13:49:29 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/04/04 22:16:59 hubertf Exp $
 #
 
-DISTNAME=	gpg2dot-1.2
+DISTNAME=	gpg2dot-1.3
 WRKSRC=		${WRKDIR}
 CATEGORIES=	security
 MASTER_SITES=	# empty
